[package]
name = "tc-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }
tc-common = { path = "../tc-common" }
network-types = "0.0.8"

[build-dependencies]
which = { version = "8.0.0", default-features = false, features = ["real-sys"] }

[[bin]]
name = "tc"
path = "src/main.rs"
