[package]
name = "tc"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tc-common = { path = "../tc-common", features = ["user"] }

aya = { workspace = true, features = ["async_tokio"] }
aya-log = { workspace = true }
libc = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
log = { workspace = true }
tokio = { workspace = true, features = [
  "macros",
  "rt",
  "rt-multi-thread",
  "net",
  "signal",
] }
bytes = "1"
env_logger = { workspace = true }

dotenv = "0.15"

[build-dependencies]
aya-build = { workspace = true }
anyhow = { workspace = true }
# TODO(https://github.com/rust-lang/cargo/issues/12375): this should be an artifact dependency, but
# it's not possible to tell cargo to use `-Z build-std` to build it. We cargo-in-cargo in the build
# script to build this, but we want to teach cargo about the dependecy so that cache invalidation
# works properly.
#
# Note also that https://github.com/rust-lang/cargo/issues/10593 occurs when `target = ...` is added
# to an artifact dependency; it seems possible to work around that by setting `resolver = "1"` in
# Cargo.toml in the workspace root.
#
# Finally note that *any* usage of `artifact = ...` in *any* Cargo.toml in the workspace breaks
# workflows with stable cargo; stable cargo outright refuses to load manifests that use unstable
# features.
tc-ebpf = { path = "../tc-ebpf" }

[[bin]]
name = "tc"
path = "src/main.rs"
