[package]
name = "tc"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tc-common = { path = "../tc-common", features = ["user"] }

aya = { workspace = true, features = ["async_tokio"] }
aya-log = { workspace = true }
libc = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
log = { workspace = true }
tokio = { workspace = true, features = [
  "macros",
  "rt",
  "rt-multi-thread",
  "net",
  "signal",
] }
bytes = "1"
env_logger = { workspace = true }

dotenv = "0.15"

# 新增依赖：数据存储和分析
rocksdb = "0.22"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
chrono = { version = "0.4", features = ["serde"] }

# Web API 相关
axum = "0.7"
serde_json = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }

# Swagger/OpenAPI 文档
utoipa = { version = "4.2", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "6.0", features = ["axum"] }

# 工具库
uuid = { version = "1.6", features = ["v4", "serde"] }
dashmap = "5.5"

[build-dependencies]
aya-build = { workspace = true }
anyhow = { workspace = true }
# TODO(https://github.com/rust-lang/cargo/issues/12375): this should be an artifact dependency, but
# it's not possible to tell cargo to use `-Z build-std` to build it. We cargo-in-cargo in the build
# script to build this, but we want to teach cargo about the dependecy so that cache invalidation
# works properly.
#
# Note also that https://github.com/rust-lang/cargo/issues/10593 occurs when `target = ...` is added
# to an artifact dependency; it seems possible to work around that by setting `resolver = "1"` in
# Cargo.toml in the workspace root.
#
# Finally note that *any* usage of `artifact = ...` in *any* Cargo.toml in the workspace breaks
# workflows with stable cargo; stable cargo outright refuses to load manifests that use unstable
# features.
tc-ebpf = { path = "../tc-ebpf" }

[[bin]]
name = "tc"
path = "src/main.rs"
